[UI] Màn hình chi tiết Tour du lịch

--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -1170,7 +1170,7 @@ header.sticky .hamburger-inner, header.sticky .hamburger-inner::before, header.s
   }
 }
 .hero_in.tours_detail:before {
-  background: url(../img/hero_in_tours_detail.jpg) center center no-repeat;
+  background: url(/img/hero_in_tours_detail.jpg) center center no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
