--- a/resources/assets/css/custom.css
+++ b/resources/assets/css/custom.css
@@ -1,3 +1,9 @@
-/*============================================================================================*/
-/* Your custom styles below */
-/*============================================================================================*/
+            /*============================================================================================*/
+            /* Your custom styles below */
+            /*============================================================================================*/
+            
+            @media only screen and (max-width: 600px) {
+                .mobile-display-name {
+                    display: none;
+                }
+            }
