--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -6010,13 +6010,13 @@ span.infobox_rate {
         content: "Tour";
     }
     .table.cart-list td:nth-of-type(2):before {
-        content: "Giá";
+        content: "Ngày khởi hành";
     }
     .table.cart-list td:nth-of-type(3):before {
-        content: "Số lượng";
+        content: "Giá";
     }
     .table.cart-list td:nth-of-type(4):before {
-        content: "Tổng tiền";
+        content: "Số lượng";
     }
     .table.cart-list td:nth-of-type(5):before {
         content: "Xóa";
