--- a/resources/assets/admin/css/login.css
+++ b/resources/assets/admin/css/login.css
@@ -2,7 +2,7 @@ body {
     color: #000;
     overflow-x: hidden;
     height: 100%;
-    background-color: #B0BEC5;
+    background-color: #d2d8dc;
     background-repeat: no-repeat
 }
 
@@ -156,16 +156,13 @@ a {
     .logo {
         margin-left: 50px;
     }
-
     .image {
         width: 300px;
         height: 220px
     }
-
     .border-line {
         border-right: none
     }
-
     .card2 {
         border-top: 1px solid #EEEEEE !important;
         margin: 0px 15px
